cmake_minimum_required(VERSION 3.1)
project(volcengine-cpp-sdk-vpc)

set(CMAKE_CXX_STANDARD 11)


set(VOLCENGINE_SDK_VPC_HEADER
    include/volcengine/vpc/VpcClient.h
)

set(VOLCENGINE_SDK_VPC_HEADER_MODEL
                include/volcengine/vpc/model/AddBandwidthPackageIpRequest.h
                include/volcengine/vpc/model/AddBandwidthPackageIpResult.h
                include/volcengine/vpc/model/AllocateEipAddressRequest.h
                include/volcengine/vpc/model/AllocateEipAddressResult.h
                include/volcengine/vpc/model/AssignPrivateIpAddressesRequest.h
                include/volcengine/vpc/model/AssignPrivateIpAddressesResult.h
                include/volcengine/vpc/model/AssociateCenForDescribeVpcAttributesOutput.h
                include/volcengine/vpc/model/AssociateCenForDescribeVpcsOutput.h
                include/volcengine/vpc/model/AssociateEipAddressRequest.h
                include/volcengine/vpc/model/AssociateEipAddressResult.h
                include/volcengine/vpc/model/AssociateHaVipRequest.h
                include/volcengine/vpc/model/AssociateHaVipResult.h
                include/volcengine/vpc/model/AssociateNetworkAclRequest.h
                include/volcengine/vpc/model/AssociateNetworkAclResult.h
                include/volcengine/vpc/model/AssociateRouteTableRequest.h
                include/volcengine/vpc/model/AssociateRouteTableResult.h
                include/volcengine/vpc/model/AssociateVpcCidrBlockRequest.h
                include/volcengine/vpc/model/AssociateVpcCidrBlockResult.h
                include/volcengine/vpc/model/AssociatedElasticIpForDescribeNetworkInterfaceAttributesOutput.h
                include/volcengine/vpc/model/AssociatedElasticIpForDescribeNetworkInterfacesOutput.h
                include/volcengine/vpc/model/AttachNetworkInterfaceRequest.h
                include/volcengine/vpc/model/AttachNetworkInterfaceResult.h
                include/volcengine/vpc/model/AuthorizeSecurityGroupEgressRequest.h
                include/volcengine/vpc/model/AuthorizeSecurityGroupEgressResult.h
                include/volcengine/vpc/model/AuthorizeSecurityGroupIngressRequest.h
                include/volcengine/vpc/model/AuthorizeSecurityGroupIngressResult.h
                include/volcengine/vpc/model/BandwidthPackageForDescribeBandwidthPackagesOutput.h
                include/volcengine/vpc/model/CreateBandwidthPackageRequest.h
                include/volcengine/vpc/model/CreateBandwidthPackageResult.h
                include/volcengine/vpc/model/CreateHaVipRequest.h
                include/volcengine/vpc/model/CreateHaVipResult.h
                include/volcengine/vpc/model/CreateNetworkAclRequest.h
                include/volcengine/vpc/model/CreateNetworkAclResult.h
                include/volcengine/vpc/model/CreateNetworkInterfaceRequest.h
                include/volcengine/vpc/model/CreateNetworkInterfaceResult.h
                include/volcengine/vpc/model/CreateRouteEntryRequest.h
                include/volcengine/vpc/model/CreateRouteEntryResult.h
                include/volcengine/vpc/model/CreateRouteTableRequest.h
                include/volcengine/vpc/model/CreateRouteTableResult.h
                include/volcengine/vpc/model/CreateSecurityGroupRequest.h
                include/volcengine/vpc/model/CreateSecurityGroupResult.h
                include/volcengine/vpc/model/CreateSubnetRequest.h
                include/volcengine/vpc/model/CreateSubnetResult.h
                include/volcengine/vpc/model/CreateVpcRequest.h
                include/volcengine/vpc/model/CreateVpcResult.h
                include/volcengine/vpc/model/DeleteBandwidthPackageRequest.h
                include/volcengine/vpc/model/DeleteBandwidthPackageResult.h
                include/volcengine/vpc/model/DeleteHaVipRequest.h
                include/volcengine/vpc/model/DeleteHaVipResult.h
                include/volcengine/vpc/model/DeleteNetworkAclRequest.h
                include/volcengine/vpc/model/DeleteNetworkAclResult.h
                include/volcengine/vpc/model/DeleteNetworkInterfaceRequest.h
                include/volcengine/vpc/model/DeleteNetworkInterfaceResult.h
                include/volcengine/vpc/model/DeleteRouteEntryRequest.h
                include/volcengine/vpc/model/DeleteRouteEntryResult.h
                include/volcengine/vpc/model/DeleteRouteTableRequest.h
                include/volcengine/vpc/model/DeleteRouteTableResult.h
                include/volcengine/vpc/model/DeleteSecurityGroupRequest.h
                include/volcengine/vpc/model/DeleteSecurityGroupResult.h
                include/volcengine/vpc/model/DeleteSubnetRequest.h
                include/volcengine/vpc/model/DeleteSubnetResult.h
                include/volcengine/vpc/model/DeleteVpcRequest.h
                include/volcengine/vpc/model/DeleteVpcResult.h
                include/volcengine/vpc/model/DescribeBandwidthPackagesRequest.h
                include/volcengine/vpc/model/DescribeBandwidthPackagesResult.h
                include/volcengine/vpc/model/DescribeEipAddressAttributesRequest.h
                include/volcengine/vpc/model/DescribeEipAddressAttributesResult.h
                include/volcengine/vpc/model/DescribeEipAddressesRequest.h
                include/volcengine/vpc/model/DescribeEipAddressesResult.h
                include/volcengine/vpc/model/DescribeHaVipsRequest.h
                include/volcengine/vpc/model/DescribeHaVipsResult.h
                include/volcengine/vpc/model/DescribeNetworkAclAttributesRequest.h
                include/volcengine/vpc/model/DescribeNetworkAclAttributesResult.h
                include/volcengine/vpc/model/DescribeNetworkAclsRequest.h
                include/volcengine/vpc/model/DescribeNetworkAclsResult.h
                include/volcengine/vpc/model/DescribeNetworkInterfaceAttributesRequest.h
                include/volcengine/vpc/model/DescribeNetworkInterfaceAttributesResult.h
                include/volcengine/vpc/model/DescribeNetworkInterfacesRequest.h
                include/volcengine/vpc/model/DescribeNetworkInterfacesResult.h
                include/volcengine/vpc/model/DescribeRouteEntryListRequest.h
                include/volcengine/vpc/model/DescribeRouteEntryListResult.h
                include/volcengine/vpc/model/DescribeRouteTableListRequest.h
                include/volcengine/vpc/model/DescribeRouteTableListResult.h
                include/volcengine/vpc/model/DescribeSecurityGroupAttributesRequest.h
                include/volcengine/vpc/model/DescribeSecurityGroupAttributesResult.h
                include/volcengine/vpc/model/DescribeSecurityGroupsRequest.h
                include/volcengine/vpc/model/DescribeSecurityGroupsResult.h
                include/volcengine/vpc/model/DescribeSubnetAttributesRequest.h
                include/volcengine/vpc/model/DescribeSubnetAttributesResult.h
                include/volcengine/vpc/model/DescribeSubnetsRequest.h
                include/volcengine/vpc/model/DescribeSubnetsResult.h
                include/volcengine/vpc/model/DescribeVpcAttributesRequest.h
                include/volcengine/vpc/model/DescribeVpcAttributesResult.h
                include/volcengine/vpc/model/DescribeVpcsRequest.h
                include/volcengine/vpc/model/DescribeVpcsResult.h
                include/volcengine/vpc/model/DetachNetworkInterfaceRequest.h
                include/volcengine/vpc/model/DetachNetworkInterfaceResult.h
                include/volcengine/vpc/model/DisassociateEipAddressRequest.h
                include/volcengine/vpc/model/DisassociateEipAddressResult.h
                include/volcengine/vpc/model/DisassociateHaVipRequest.h
                include/volcengine/vpc/model/DisassociateHaVipResult.h
                include/volcengine/vpc/model/DisassociateNetworkAclRequest.h
                include/volcengine/vpc/model/DisassociateNetworkAclResult.h
                include/volcengine/vpc/model/DisassociateRouteTableRequest.h
                include/volcengine/vpc/model/DisassociateRouteTableResult.h
                include/volcengine/vpc/model/DisassociateVpcCidrBlockRequest.h
                include/volcengine/vpc/model/DisassociateVpcCidrBlockResult.h
                include/volcengine/vpc/model/EgressAclEntryForDescribeNetworkAclAttributesOutput.h
                include/volcengine/vpc/model/EgressAclEntryForDescribeNetworkAclsOutput.h
                include/volcengine/vpc/model/EgressAclEntryForUpdateNetworkAclEntriesInput.h
                include/volcengine/vpc/model/EipAddressForDescribeBandwidthPackagesOutput.h
                include/volcengine/vpc/model/EipAddressForDescribeEipAddressesOutput.h
                include/volcengine/vpc/model/HaVipForDescribeHaVipsOutput.h
                include/volcengine/vpc/model/IngressAclEntryForDescribeNetworkAclAttributesOutput.h
                include/volcengine/vpc/model/IngressAclEntryForDescribeNetworkAclsOutput.h
                include/volcengine/vpc/model/IngressAclEntryForUpdateNetworkAclEntriesInput.h
                include/volcengine/vpc/model/ListTagsForResourcesRequest.h
                include/volcengine/vpc/model/ListTagsForResourcesResult.h
                include/volcengine/vpc/model/ModifyBandwidthPackageAttributesRequest.h
                include/volcengine/vpc/model/ModifyBandwidthPackageAttributesResult.h
                include/volcengine/vpc/model/ModifyBandwidthPackageSpecRequest.h
                include/volcengine/vpc/model/ModifyBandwidthPackageSpecResult.h
                include/volcengine/vpc/model/ModifyEipAddressAttributesRequest.h
                include/volcengine/vpc/model/ModifyEipAddressAttributesResult.h
                include/volcengine/vpc/model/ModifyHaVipAttributesRequest.h
                include/volcengine/vpc/model/ModifyHaVipAttributesResult.h
                include/volcengine/vpc/model/ModifyNetworkAclAttributesRequest.h
                include/volcengine/vpc/model/ModifyNetworkAclAttributesResult.h
                include/volcengine/vpc/model/ModifyNetworkInterfaceAttributesRequest.h
                include/volcengine/vpc/model/ModifyNetworkInterfaceAttributesResult.h
                include/volcengine/vpc/model/ModifyRouteEntryRequest.h
                include/volcengine/vpc/model/ModifyRouteEntryResult.h
                include/volcengine/vpc/model/ModifyRouteTableAttributesRequest.h
                include/volcengine/vpc/model/ModifyRouteTableAttributesResult.h
                include/volcengine/vpc/model/ModifySecurityGroupAttributesRequest.h
                include/volcengine/vpc/model/ModifySecurityGroupAttributesResult.h
                include/volcengine/vpc/model/ModifySecurityGroupRuleDescriptionsEgressRequest.h
                include/volcengine/vpc/model/ModifySecurityGroupRuleDescriptionsEgressResult.h
                include/volcengine/vpc/model/ModifySecurityGroupRuleDescriptionsIngressRequest.h
                include/volcengine/vpc/model/ModifySecurityGroupRuleDescriptionsIngressResult.h
                include/volcengine/vpc/model/ModifySubnetAttributesRequest.h
                include/volcengine/vpc/model/ModifySubnetAttributesResult.h
                include/volcengine/vpc/model/ModifyVpcAttributesRequest.h
                include/volcengine/vpc/model/ModifyVpcAttributesResult.h
                include/volcengine/vpc/model/NetworkAclAttributeForDescribeNetworkAclAttributesOutput.h
                include/volcengine/vpc/model/NetworkAclForDescribeNetworkAclsOutput.h
                include/volcengine/vpc/model/NetworkInterfaceSetForDescribeNetworkInterfacesOutput.h
                include/volcengine/vpc/model/PermissionForDescribeSecurityGroupAttributesOutput.h
                include/volcengine/vpc/model/PrivateIpSetForDescribeNetworkInterfaceAttributesOutput.h
                include/volcengine/vpc/model/PrivateIpSetForDescribeNetworkInterfacesOutput.h
                include/volcengine/vpc/model/PrivateIpSetsForDescribeNetworkInterfaceAttributesOutput.h
                include/volcengine/vpc/model/PrivateIpSetsForDescribeNetworkInterfacesOutput.h
                include/volcengine/vpc/model/ReleaseEipAddressRequest.h
                include/volcengine/vpc/model/ReleaseEipAddressResult.h
                include/volcengine/vpc/model/RemoveBandwidthPackageIpRequest.h
                include/volcengine/vpc/model/RemoveBandwidthPackageIpResult.h
                include/volcengine/vpc/model/ResourceForAssociateNetworkAclInput.h
                include/volcengine/vpc/model/ResourceForDescribeNetworkAclAttributesOutput.h
                include/volcengine/vpc/model/ResourceForDescribeNetworkAclsOutput.h
                include/volcengine/vpc/model/ResourceForDisassociateNetworkAclInput.h
                include/volcengine/vpc/model/ResourceTagForListTagsForResourcesOutput.h
                include/volcengine/vpc/model/RevokeSecurityGroupEgressRequest.h
                include/volcengine/vpc/model/RevokeSecurityGroupEgressResult.h
                include/volcengine/vpc/model/RevokeSecurityGroupIngressRequest.h
                include/volcengine/vpc/model/RevokeSecurityGroupIngressResult.h
                include/volcengine/vpc/model/RouteEntryForDescribeRouteEntryListOutput.h
                include/volcengine/vpc/model/RouteTableForDescribeSubnetAttributesOutput.h
                include/volcengine/vpc/model/RouteTableForDescribeSubnetsOutput.h
                include/volcengine/vpc/model/RouterTableListForDescribeRouteTableListOutput.h
                include/volcengine/vpc/model/SecurityGroupForDescribeSecurityGroupsOutput.h
                include/volcengine/vpc/model/SubnetForDescribeSubnetsOutput.h
                include/volcengine/vpc/model/TagFilterForDescribeBandwidthPackagesInput.h
                include/volcengine/vpc/model/TagFilterForDescribeEipAddressesInput.h
                include/volcengine/vpc/model/TagFilterForDescribeNetworkInterfacesInput.h
                include/volcengine/vpc/model/TagFilterForDescribeSecurityGroupsInput.h
                include/volcengine/vpc/model/TagFilterForDescribeVpcsInput.h
                include/volcengine/vpc/model/TagFilterForListTagsForResourcesInput.h
                include/volcengine/vpc/model/TagForAllocateEipAddressInput.h
                include/volcengine/vpc/model/TagForCreateBandwidthPackageInput.h
                include/volcengine/vpc/model/TagForCreateNetworkInterfaceInput.h
                include/volcengine/vpc/model/TagForCreateSecurityGroupInput.h
                include/volcengine/vpc/model/TagForCreateVpcInput.h
                include/volcengine/vpc/model/TagForDescribeBandwidthPackagesOutput.h
                include/volcengine/vpc/model/TagForDescribeEipAddressAttributesOutput.h
                include/volcengine/vpc/model/TagForDescribeEipAddressesOutput.h
                include/volcengine/vpc/model/TagForDescribeNetworkInterfaceAttributesOutput.h
                include/volcengine/vpc/model/TagForDescribeNetworkInterfacesOutput.h
                include/volcengine/vpc/model/TagForDescribeSecurityGroupAttributesOutput.h
                include/volcengine/vpc/model/TagForDescribeSecurityGroupsOutput.h
                include/volcengine/vpc/model/TagForDescribeVpcAttributesOutput.h
                include/volcengine/vpc/model/TagForDescribeVpcsOutput.h
                include/volcengine/vpc/model/TagForTagResourcesInput.h
                include/volcengine/vpc/model/TagResourcesRequest.h
                include/volcengine/vpc/model/TagResourcesResult.h
                include/volcengine/vpc/model/UnassignPrivateIpAddressesRequest.h
                include/volcengine/vpc/model/UnassignPrivateIpAddressesResult.h
                include/volcengine/vpc/model/UntagResourcesRequest.h
                include/volcengine/vpc/model/UntagResourcesResult.h
                include/volcengine/vpc/model/UpdateNetworkAclEntriesRequest.h
                include/volcengine/vpc/model/UpdateNetworkAclEntriesResult.h
                include/volcengine/vpc/model/VpcForDescribeVpcsOutput.h
    )

set(VOLCENGINE_SDK_VPC_LIB
    src/VpcClient.cpp
    src/model/vpc/AddBandwidthPackageIpRequest.cpp
    src/model/vpc/AddBandwidthPackageIpResult.cpp
    src/model/vpc/AllocateEipAddressRequest.cpp
    src/model/vpc/AllocateEipAddressResult.cpp
    src/model/vpc/AssignPrivateIpAddressesRequest.cpp
    src/model/vpc/AssignPrivateIpAddressesResult.cpp
    src/model/vpc/AssociateCenForDescribeVpcAttributesOutput.cpp
    src/model/vpc/AssociateCenForDescribeVpcsOutput.cpp
    src/model/vpc/AssociateEipAddressRequest.cpp
    src/model/vpc/AssociateEipAddressResult.cpp
    src/model/vpc/AssociateHaVipRequest.cpp
    src/model/vpc/AssociateHaVipResult.cpp
    src/model/vpc/AssociateNetworkAclRequest.cpp
    src/model/vpc/AssociateNetworkAclResult.cpp
    src/model/vpc/AssociateRouteTableRequest.cpp
    src/model/vpc/AssociateRouteTableResult.cpp
    src/model/vpc/AssociateVpcCidrBlockRequest.cpp
    src/model/vpc/AssociateVpcCidrBlockResult.cpp
    src/model/vpc/AssociatedElasticIpForDescribeNetworkInterfaceAttributesOutput.cpp
    src/model/vpc/AssociatedElasticIpForDescribeNetworkInterfacesOutput.cpp
    src/model/vpc/AttachNetworkInterfaceRequest.cpp
    src/model/vpc/AttachNetworkInterfaceResult.cpp
    src/model/vpc/AuthorizeSecurityGroupEgressRequest.cpp
    src/model/vpc/AuthorizeSecurityGroupEgressResult.cpp
    src/model/vpc/AuthorizeSecurityGroupIngressRequest.cpp
    src/model/vpc/AuthorizeSecurityGroupIngressResult.cpp
    src/model/vpc/BandwidthPackageForDescribeBandwidthPackagesOutput.cpp
    src/model/vpc/CreateBandwidthPackageRequest.cpp
    src/model/vpc/CreateBandwidthPackageResult.cpp
    src/model/vpc/CreateHaVipRequest.cpp
    src/model/vpc/CreateHaVipResult.cpp
    src/model/vpc/CreateNetworkAclRequest.cpp
    src/model/vpc/CreateNetworkAclResult.cpp
    src/model/vpc/CreateNetworkInterfaceRequest.cpp
    src/model/vpc/CreateNetworkInterfaceResult.cpp
    src/model/vpc/CreateRouteEntryRequest.cpp
    src/model/vpc/CreateRouteEntryResult.cpp
    src/model/vpc/CreateRouteTableRequest.cpp
    src/model/vpc/CreateRouteTableResult.cpp
    src/model/vpc/CreateSecurityGroupRequest.cpp
    src/model/vpc/CreateSecurityGroupResult.cpp
    src/model/vpc/CreateSubnetRequest.cpp
    src/model/vpc/CreateSubnetResult.cpp
    src/model/vpc/CreateVpcRequest.cpp
    src/model/vpc/CreateVpcResult.cpp
    src/model/vpc/DeleteBandwidthPackageRequest.cpp
    src/model/vpc/DeleteBandwidthPackageResult.cpp
    src/model/vpc/DeleteHaVipRequest.cpp
    src/model/vpc/DeleteHaVipResult.cpp
    src/model/vpc/DeleteNetworkAclRequest.cpp
    src/model/vpc/DeleteNetworkAclResult.cpp
    src/model/vpc/DeleteNetworkInterfaceRequest.cpp
    src/model/vpc/DeleteNetworkInterfaceResult.cpp
    src/model/vpc/DeleteRouteEntryRequest.cpp
    src/model/vpc/DeleteRouteEntryResult.cpp
    src/model/vpc/DeleteRouteTableRequest.cpp
    src/model/vpc/DeleteRouteTableResult.cpp
    src/model/vpc/DeleteSecurityGroupRequest.cpp
    src/model/vpc/DeleteSecurityGroupResult.cpp
    src/model/vpc/DeleteSubnetRequest.cpp
    src/model/vpc/DeleteSubnetResult.cpp
    src/model/vpc/DeleteVpcRequest.cpp
    src/model/vpc/DeleteVpcResult.cpp
    src/model/vpc/DescribeBandwidthPackagesRequest.cpp
    src/model/vpc/DescribeBandwidthPackagesResult.cpp
    src/model/vpc/DescribeEipAddressAttributesRequest.cpp
    src/model/vpc/DescribeEipAddressAttributesResult.cpp
    src/model/vpc/DescribeEipAddressesRequest.cpp
    src/model/vpc/DescribeEipAddressesResult.cpp
    src/model/vpc/DescribeHaVipsRequest.cpp
    src/model/vpc/DescribeHaVipsResult.cpp
    src/model/vpc/DescribeNetworkAclAttributesRequest.cpp
    src/model/vpc/DescribeNetworkAclAttributesResult.cpp
    src/model/vpc/DescribeNetworkAclsRequest.cpp
    src/model/vpc/DescribeNetworkAclsResult.cpp
    src/model/vpc/DescribeNetworkInterfaceAttributesRequest.cpp
    src/model/vpc/DescribeNetworkInterfaceAttributesResult.cpp
    src/model/vpc/DescribeNetworkInterfacesRequest.cpp
    src/model/vpc/DescribeNetworkInterfacesResult.cpp
    src/model/vpc/DescribeRouteEntryListRequest.cpp
    src/model/vpc/DescribeRouteEntryListResult.cpp
    src/model/vpc/DescribeRouteTableListRequest.cpp
    src/model/vpc/DescribeRouteTableListResult.cpp
    src/model/vpc/DescribeSecurityGroupAttributesRequest.cpp
    src/model/vpc/DescribeSecurityGroupAttributesResult.cpp
    src/model/vpc/DescribeSecurityGroupsRequest.cpp
    src/model/vpc/DescribeSecurityGroupsResult.cpp
    src/model/vpc/DescribeSubnetAttributesRequest.cpp
    src/model/vpc/DescribeSubnetAttributesResult.cpp
    src/model/vpc/DescribeSubnetsRequest.cpp
    src/model/vpc/DescribeSubnetsResult.cpp
    src/model/vpc/DescribeVpcAttributesRequest.cpp
    src/model/vpc/DescribeVpcAttributesResult.cpp
    src/model/vpc/DescribeVpcsRequest.cpp
    src/model/vpc/DescribeVpcsResult.cpp
    src/model/vpc/DetachNetworkInterfaceRequest.cpp
    src/model/vpc/DetachNetworkInterfaceResult.cpp
    src/model/vpc/DisassociateEipAddressRequest.cpp
    src/model/vpc/DisassociateEipAddressResult.cpp
    src/model/vpc/DisassociateHaVipRequest.cpp
    src/model/vpc/DisassociateHaVipResult.cpp
    src/model/vpc/DisassociateNetworkAclRequest.cpp
    src/model/vpc/DisassociateNetworkAclResult.cpp
    src/model/vpc/DisassociateRouteTableRequest.cpp
    src/model/vpc/DisassociateRouteTableResult.cpp
    src/model/vpc/DisassociateVpcCidrBlockRequest.cpp
    src/model/vpc/DisassociateVpcCidrBlockResult.cpp
    src/model/vpc/EgressAclEntryForDescribeNetworkAclAttributesOutput.cpp
    src/model/vpc/EgressAclEntryForDescribeNetworkAclsOutput.cpp
    src/model/vpc/EgressAclEntryForUpdateNetworkAclEntriesInput.cpp
    src/model/vpc/EipAddressForDescribeBandwidthPackagesOutput.cpp
    src/model/vpc/EipAddressForDescribeEipAddressesOutput.cpp
    src/model/vpc/HaVipForDescribeHaVipsOutput.cpp
    src/model/vpc/IngressAclEntryForDescribeNetworkAclAttributesOutput.cpp
    src/model/vpc/IngressAclEntryForDescribeNetworkAclsOutput.cpp
    src/model/vpc/IngressAclEntryForUpdateNetworkAclEntriesInput.cpp
    src/model/vpc/ListTagsForResourcesRequest.cpp
    src/model/vpc/ListTagsForResourcesResult.cpp
    src/model/vpc/ModifyBandwidthPackageAttributesRequest.cpp
    src/model/vpc/ModifyBandwidthPackageAttributesResult.cpp
    src/model/vpc/ModifyBandwidthPackageSpecRequest.cpp
    src/model/vpc/ModifyBandwidthPackageSpecResult.cpp
    src/model/vpc/ModifyEipAddressAttributesRequest.cpp
    src/model/vpc/ModifyEipAddressAttributesResult.cpp
    src/model/vpc/ModifyHaVipAttributesRequest.cpp
    src/model/vpc/ModifyHaVipAttributesResult.cpp
    src/model/vpc/ModifyNetworkAclAttributesRequest.cpp
    src/model/vpc/ModifyNetworkAclAttributesResult.cpp
    src/model/vpc/ModifyNetworkInterfaceAttributesRequest.cpp
    src/model/vpc/ModifyNetworkInterfaceAttributesResult.cpp
    src/model/vpc/ModifyRouteEntryRequest.cpp
    src/model/vpc/ModifyRouteEntryResult.cpp
    src/model/vpc/ModifyRouteTableAttributesRequest.cpp
    src/model/vpc/ModifyRouteTableAttributesResult.cpp
    src/model/vpc/ModifySecurityGroupAttributesRequest.cpp
    src/model/vpc/ModifySecurityGroupAttributesResult.cpp
    src/model/vpc/ModifySecurityGroupRuleDescriptionsEgressRequest.cpp
    src/model/vpc/ModifySecurityGroupRuleDescriptionsEgressResult.cpp
    src/model/vpc/ModifySecurityGroupRuleDescriptionsIngressRequest.cpp
    src/model/vpc/ModifySecurityGroupRuleDescriptionsIngressResult.cpp
    src/model/vpc/ModifySubnetAttributesRequest.cpp
    src/model/vpc/ModifySubnetAttributesResult.cpp
    src/model/vpc/ModifyVpcAttributesRequest.cpp
    src/model/vpc/ModifyVpcAttributesResult.cpp
    src/model/vpc/NetworkAclAttributeForDescribeNetworkAclAttributesOutput.cpp
    src/model/vpc/NetworkAclForDescribeNetworkAclsOutput.cpp
    src/model/vpc/NetworkInterfaceSetForDescribeNetworkInterfacesOutput.cpp
    src/model/vpc/PermissionForDescribeSecurityGroupAttributesOutput.cpp
    src/model/vpc/PrivateIpSetForDescribeNetworkInterfaceAttributesOutput.cpp
    src/model/vpc/PrivateIpSetForDescribeNetworkInterfacesOutput.cpp
    src/model/vpc/PrivateIpSetsForDescribeNetworkInterfaceAttributesOutput.cpp
    src/model/vpc/PrivateIpSetsForDescribeNetworkInterfacesOutput.cpp
    src/model/vpc/ReleaseEipAddressRequest.cpp
    src/model/vpc/ReleaseEipAddressResult.cpp
    src/model/vpc/RemoveBandwidthPackageIpRequest.cpp
    src/model/vpc/RemoveBandwidthPackageIpResult.cpp
    src/model/vpc/ResourceForAssociateNetworkAclInput.cpp
    src/model/vpc/ResourceForDescribeNetworkAclAttributesOutput.cpp
    src/model/vpc/ResourceForDescribeNetworkAclsOutput.cpp
    src/model/vpc/ResourceForDisassociateNetworkAclInput.cpp
    src/model/vpc/ResourceTagForListTagsForResourcesOutput.cpp
    src/model/vpc/RevokeSecurityGroupEgressRequest.cpp
    src/model/vpc/RevokeSecurityGroupEgressResult.cpp
    src/model/vpc/RevokeSecurityGroupIngressRequest.cpp
    src/model/vpc/RevokeSecurityGroupIngressResult.cpp
    src/model/vpc/RouteEntryForDescribeRouteEntryListOutput.cpp
    src/model/vpc/RouteTableForDescribeSubnetAttributesOutput.cpp
    src/model/vpc/RouteTableForDescribeSubnetsOutput.cpp
    src/model/vpc/RouterTableListForDescribeRouteTableListOutput.cpp
    src/model/vpc/SecurityGroupForDescribeSecurityGroupsOutput.cpp
    src/model/vpc/SubnetForDescribeSubnetsOutput.cpp
    src/model/vpc/TagFilterForDescribeBandwidthPackagesInput.cpp
    src/model/vpc/TagFilterForDescribeEipAddressesInput.cpp
    src/model/vpc/TagFilterForDescribeNetworkInterfacesInput.cpp
    src/model/vpc/TagFilterForDescribeSecurityGroupsInput.cpp
    src/model/vpc/TagFilterForDescribeVpcsInput.cpp
    src/model/vpc/TagFilterForListTagsForResourcesInput.cpp
    src/model/vpc/TagForAllocateEipAddressInput.cpp
    src/model/vpc/TagForCreateBandwidthPackageInput.cpp
    src/model/vpc/TagForCreateNetworkInterfaceInput.cpp
    src/model/vpc/TagForCreateSecurityGroupInput.cpp
    src/model/vpc/TagForCreateVpcInput.cpp
    src/model/vpc/TagForDescribeBandwidthPackagesOutput.cpp
    src/model/vpc/TagForDescribeEipAddressAttributesOutput.cpp
    src/model/vpc/TagForDescribeEipAddressesOutput.cpp
    src/model/vpc/TagForDescribeNetworkInterfaceAttributesOutput.cpp
    src/model/vpc/TagForDescribeNetworkInterfacesOutput.cpp
    src/model/vpc/TagForDescribeSecurityGroupAttributesOutput.cpp
    src/model/vpc/TagForDescribeSecurityGroupsOutput.cpp
    src/model/vpc/TagForDescribeVpcAttributesOutput.cpp
    src/model/vpc/TagForDescribeVpcsOutput.cpp
    src/model/vpc/TagForTagResourcesInput.cpp
    src/model/vpc/TagResourcesRequest.cpp
    src/model/vpc/TagResourcesResult.cpp
    src/model/vpc/UnassignPrivateIpAddressesRequest.cpp
    src/model/vpc/UnassignPrivateIpAddressesResult.cpp
    src/model/vpc/UntagResourcesRequest.cpp
    src/model/vpc/UntagResourcesResult.cpp
    src/model/vpc/UpdateNetworkAclEntriesRequest.cpp
    src/model/vpc/UpdateNetworkAclEntriesResult.cpp
    src/model/vpc/VpcForDescribeVpcsOutput.cpp
)

add_library(${PROJECT_NAME}
     STATIC ${VOLCENGINE_SDK_VPC_LIB}
     ${VOLCENGINE_SDK_VPC_HEADER}
     ${VOLCENGINE_SDK_VPC_HEADER_MODEL}
     )

set_target_properties(${PROJECT_NAME}
     PROPERTIES
     LINKER_LANGUAGE CXX
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
     OUTPUT_NAME ${PROJECT_NAME}
)

target_include_directories(${PROJECT_NAME}
     PRIVATE include
     ${CMAKE_SOURCE_DIR}/${TARGET_OUTPUT_NAME_PREFIX}core/include)

target_link_libraries(${PROJECT_NAME} ${TARGET_OUTPUT_NAME_PREFIX}core)

target_link_libraries(${PROJECT_NAME} ${CLIENT_SSL_LIBS})
target_link_libraries(${PROJECT_NAME} ${CLIENT_CURL_LIBS})


install(FILES ${VOLCENGINE_SDK_VPC_HEADER}
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/volcengine/vpc)
install(FILES  ${VOLCENGINE_SDK_VPC_HEADER_MODEL}
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/volcengine/vpc/model)
install(TARGETS ${PROJECT_NAME}
       ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
       LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
       RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)